<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mad.exercise2.MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/logo_layer"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/logo_layer"
        android:gravity="top"
        android:padding="16dp"
        android:singleLine="true"
        android:text="@string/heading"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/inputGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <LinearLayout
            android:id="@+id/phoneGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/phone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/phone_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/exit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/exit" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>